--- a/references.bib
+++ b/references.bib
@@ -17,3 +17,10 @@
   Publisher={Taylor \& Francis}
 }
 
+@misc{sutrich2020beatsaber,
+  author       = {Sutrich, Nicholas and Hunt, Cale},
+  title        = {Beat Saber: Everything you need to know about the VR Rhythm game},
+  year         = {2020},
+  accessed     = {Maj 2024},
+  url          = {https://www.windowscentral.com/beat-saber-everything-we-know-about-vr-rhythm-game},
+}
