update pred prezentovanim

--- a/main.tex
+++ b/main.tex
@@ -21,7 +21,7 @@
 \usepackage{listings}
 \usepackage{amsmath}
 \usepackage{amssymb}
-\usepackage{multirow}
+\usepackage{multirow} 
 \usepackage{booktabs}
 \usepackage{color}
 \usepackage{setspace}
@@ -31,7 +31,7 @@
 \usepackage{natbib}
 \usepackage{subcaption}
 %\usepackage[font=large]{subcaption}
-\usepackage{emptypage}
+%\usepackage{emptypage}
 \usepackage{float}
 \usepackage[hidelinks,breaklinks]{hyperref}
 %\usepackage{minted}
@@ -63,7 +63,7 @@
 \def\program{Aplikovaná informatika}
 \def\mfpracovisko{Katedra aplikovanej informatiky}
 
-\setcounter{secnumdepth}{2}
+\setcounter{secnumdepth}{2} 
 
 \begin{document}
 \frontmatter
@@ -239,6 +239,12 @@
 
 \input{uvod}
 \input{rytmicke-pc-hry/rytmicke-pc-hry}
+\input{suvisiace-prace/suvisiace-prace}
+\input{existujuce-nastroje/existujuce-nastroje}
+\input{dataset/dataset}
+\input{navrh-implementacia/navrh-implementacia}
+\input{porovnanie/porovnanie}
+\input{vyhodnotenie/vyhodnotenie}
 \input{zaver}
 
 
