--- a/references.bib
+++ b/references.bib
@@ -1,26 +1,90 @@
 @inproceedings{miguel2004tempo,
-  Title={Tempo and beat estimation of musical signals},
-  Author={Miguel Alonso, Bertrand David and Richard, Gaël},
-  Booktitle={Proceedings of the International Conference on Music Information Retrieval (ISMIR), Barcelona, Spain},
-  Year={2004}
+  title={Tempo and beat estimation of musical signals},
+  author={Miguel Alonso, Bertrand David and Richard, Gaël},
+  booktitle={Proceedings of the International Conference on Music Information Retrieval (ISMIR), Barcelona, Spain},
+  year={2004},
+  pages={1--6}
 }
 
 
 @article{ellis2007beat,
-  Title={Beat tracking by dynamic programming},
-  Author={Ellis, Daniel PW},
-  Journal={Journal of New Music Research},
-  Volume={36},
-  Number={1},
-  Pages={51—60},
-  Year={2007},
-  Publisher={Taylor \& Francis}
+  title={Beat tracking by dynamic programming},
+  author={Ellis, Daniel PW},
+  journal={Journal of New Music Research},
+  volume={36},
+  number={1},
+  pages={51—60},
+  year={2007},
+  publisher={Taylor \& Francis}
 }
 
 @misc{sutrich2020beatsaber,
   author       = {Sutrich, Nicholas and Hunt, Cale},
   title        = {Beat Saber: Everything you need to know about the VR Rhythm game},
   year         = {2020},
-  accessed     = {Maj 2024},
-  url          = {https://www.windowscentral.com/beat-saber-everything-we-know-about-vr-rhythm-game},
+  accessed     = {Navštívené: január 2024},
+  howpublished = {\url{https://www.windowscentral.com/beat-saber-everything-we-know-about-vr-rhythm-game}},
+}
+
+@inproceedings{liang2019procedural,
+  title={Procedural content generation of rhythm games using deep learning methods},
+  author={Liang, Yubin and Li, Wanxiang and Ikeda, Kokolo},
+  booktitle={Entertainment Computing and Serious Games: First IFIP TC 14 Joint International Conference, ICEC-JCSG 2019, Arequipa, Peru, November 11--15, 2019, Proceedings 1},
+  pages={134--145},
+  year={2019},
+  organization={Springer}
+}
+
+@inproceedings{donahue2017dance,
+  title={Dance dance convolution},
+  author={Donahue, Chris and Lipton, Zachary C and McAuley, Julian},
+  booktitle={International conference on machine learning},
+  pages={1039--1048},
+  year={2017},
+  organization={PMLR}
+}
+
+@book{Goodfellow-et-al-2016,
+    title={Deep Learning},
+    author={Ian Goodfellow and Yoshua Bengio and Aaron Courville},
+    publisher={MIT Press},
+    note={\url{http://www.deeplearningbook.org}},
+    year={2016},
+    pages={1--800}
+}
+
+@book{chollet2021deep,
+  title={Deep learning with Python},
+  author={Chollet, Francois},
+  year={2021},
+  publisher={Simon and Schuster}
+}
+
+@misc{convnn,
+  author       = {Sutrich, Nicholas and Hunt, Cale},
+  title        = {Convolutional neural network.},
+  accessed     = {Navštívené: január 2024},
+  howpublished = {\url{https://www.mathworks.com/discovery/convolutional-neural-network-matlab.html}}
+}
+
+@article{Yaoshiang2020ce,
+  author={Ho, Yaoshiang and Wookey, Samuel},
+  journal={IEEE Access}, 
+  title={The Real-World-Weight Cross-Entropy Loss Function: Modeling the Costs of Mislabeling}, 
+  year={2020},
+  volume={8},
+  number={},
+  pages={4806-4813},
+  keywords={Training;Neural networks;Machine learning;Probabilistic logic;Measurement;Maximum likelihood estimation;Standards;Machine learning;class imbalance;oversampling;undersampling;ethnic stereotypes;social bias;maximum likelihood estimation;cross-entropy;softmax},
+  doi={10.1109/ACCESS.2019.2962617}
+}
+
+@inproceedings{takada2023genelive,
+  title={Gen{\'e}Live! generating rhythm actions in love live!},
+  author={Takada, Atsushi and Yamazaki, Daichi and Yoshida, Yudai and Ganbat, Nyamkhuu and Shimotomai, Takayuki and Hamada, Naoki and Liu, Likun and Yamamoto, Taiga and Sakurai, Daisuke},
+  booktitle={Proceedings of the AAAI Conference on Artificial Intelligence},
+  volume={37},
+  number={4},
+  pages={5266--5275},
+  year={2023}
 }
