--- a/main.tex
+++ b/main.tex
@@ -12,6 +12,7 @@
 \usepackage[slovak]{babel}
 \usepackage{graphicx}
 \usepackage{url}
+\usepackage{lmodern}
 
 % --- additional packages
 \usepackage{epsfig}
@@ -50,13 +51,13 @@
 
 % -------------------
 % --- Definicia zakladnych pojmov
-% -------------------
-\def\mfrok{2024}
+% ------------4------
+\def\mfrok{2025}
 \def\mftitle{Automatická Generácia Úrovní pre Rytmické Počítačové Hry}
 \def\mfthesistype{Diplomová práca}
 \def\mfauthor{Bc. Filip Masný}
 \def\mfskolitel{Ing. Viktor Kocur, PhD.}
-\def\mfplacedate{Bratislava, 2024}
+\def\mfplacedate{Bratislava, 2025}
 \def\mfuniversity{Univerzita Komenského v Bratislave }
 \def\mffaculty{Fakulta matematiky, fyziky a informatiky}
 \def\mfodbor{18. Informatika}
@@ -203,7 +204,7 @@
 \chapter*{Abstrakt}\label{chap:abstract_sk}
 \input{abstrakt}
 
-\paragraph*{Kľúčové slová:}
+\paragraph*{Kľúčové slová: rytmické počítačové hry, chart súbory, automatizácia, generatívne modely, hlboké učenie, konvolučné neurónové siete.}
 
 
 \newpage
@@ -211,7 +212,7 @@
 \chapter*{Abstract}\label{chap:abstract_en}
 \input{abstract}
 
-\paragraph*{Keywords:}
+\paragraph*{Keywords: rhythmic computer games, chart files, automation, generative models, deep learning, convolutional neural networks.}
 
 
 % --- koniec abstraktov
