--- a/references.bib
+++ b/references.bib
@@ -84,7 +84,14 @@
   author={Takada, Atsushi and Yamazaki, Daichi and Yoshida, Yudai and Ganbat, Nyamkhuu and Shimotomai, Takayuki and Hamada, Naoki and Liu, Likun and Yamamoto, Taiga and Sakurai, Daisuke},
   booktitle={Proceedings of the AAAI Conference on Artificial Intelligence},
   volume={37},
-  number={4},
+  number={},
   pages={5266--5275},
   year={2023}
+}
+
+@book{davis2001fourier,
+  title={Fourier transform spectrometry},
+  author={Davis, Sumner P and Abrams, Mark C and Brault, James W},
+  year={2001},
+  publisher={Elsevier}
 }
